# openhantek

./: .gitignore  .travis.yml  AppRun  CMakeLists.txt  openhantek.desktop  readme.md
cmake/: fftw_on_windows.cmake
docs/: adddevice.md  build.md  index.md
firmware/: CMakeLists.txt  dso6022be-firmware.hex  get-fw-driver.sh
openhantek/: CMakeLists.txt
openhantek/res/firmware/: dso6082be-firmware.hex
openhantek/src/: configpages.cpp  dockwindows.cpp  dockwindows.h  dsosettings.cpp  dsowidget.cpp  dsowidget.h  exporter.cpp  glgenerator.cpp  glscope.cpp  glscope.h  glscopegraph.cpp  glscopegraph.h  helper.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openhantek.cpp  scopesettings.h  settings.cpp  settings.h  viewconstants.h  viewsettings.h
openhantek/src/analyse/: dataanalyzer.cpp
openhantek/src/configdialog/: DsoConfigAnalysisPage.cpp  DsoConfigAnalysisPage.h  DsoConfigColorsPage.cpp  DsoConfigColorsPage.h  DsoConfigFilesPage.cpp  DsoConfigFilesPage.h  DsoConfigProbePage.cpp  DsoConfigProbePage.h  DsoConfigScopePage.cpp  DsoConfigScopePage.h  configdialog.cpp  configdialog.h
openhantek/src/docks/: DebugDock.cpp  DebugDock.h  HorizontalDock.cpp  HorizontalDock.h  SpectrumDock.cpp  TriggerDock.cpp  TriggerDock.h  VoltageDock.cpp  VoltageDock.h  VoltageOrSpectrumDock.cpp  VoltageOrSpectrumDock.h  dockwindows.cpp  dockwindows.h  gainAdjustDock.cpp  gainAdjustDock.h
openhantek/src/exporting/: exportcsv.cpp  exportcsv.h  exporterinterface.h  exporterregistry.cpp  exporterregistry.h  exportimage.cpp  exportimage.h  exportprint.cpp  exportprint.h  exportsettings.cpp  exportsettings.h  legacyexportdrawer.cpp  legacyexportdrawer.h  readme.md
openhantek/src/hantek/: control.cpp  control.h
openhantek/src/hantek/usb/: ezusb.h  finddevices.cpp  finddevices.h
openhantek/src/hantekdso/: channelusage.cpp  channelusage.h  controlsettings.cpp  controlsettings.h  controlspecification.h  devicesettings.cpp  devicesettings.h  dsocommandqueue.cpp  dsocommandqueue.h  dsocontrol.cpp  dsocontrol.h  dsoloop.cpp  dsoloop.h  dsomodel.cpp  dsomodel.h  dsosamples.h  enums.cpp  enums.h  errorcodes.h  hantekdsocontrol.cpp  hantekdsocontrol.h  modelregistry.cpp  modelregistry.h  modelspecification.cpp  modelspecification.h  readme.md  states.h
openhantek/src/hantekdso/models/: modelDDS120.cpp  modelDEMO.cpp  modelDSO2090.cpp  modelDSO2090.h  modelDSO2150.cpp  modelDSO2150.h  modelDSO2250.cpp  modelDSO2250.h  modelDSO5200.cpp  modelDSO5200.h  modelDSO6022.cpp  modelDSO6022.h
openhantek/src/hantekprotocol/: bulkStructs.cpp  bulkStructs.h  bulkcommand.cpp  bulkcommand.h  codes.h  controlStructs.cpp  controlStructs.h  controlcommand.cpp  controlcommand.h  definitions.h  types.h
openhantek/src/iconfont/: QtAwesome.cpp  QtAwesome.h
openhantek/src/post/: enums.cpp  enums.h  graphgenerator.cpp  graphgenerator.h  mathchannelgenerator.cpp  mathchannelgenerator.h  postprocessing.cpp  postprocessing.h  postprocessingsettings.cpp  postprocessingsettings.h  ppresult.cpp  ppresult.h  processor.h  readme.md  selfcalibration.cpp  selfcalibration.h  softwaretrigger.cpp  softwaretrigger.h  spectrumgenerator.cpp  spectrumgenerator.h
openhantek/src/scopeview/: glframe.cpp  glframe.h  glicon.cpp  glicon.h  glmousedevice.cpp  glmousedevice.h  glmoveresizesnap.cpp  glmoveresizesnap.h  glscope.cpp  glscope.h  glscopegraph.cpp  glscopegraph.h  glscopegrid.cpp  glscopegrid.h  glscopehover.h  glscopezoomviewport.cpp  glscopezoomviewport.h
openhantek/src/selectdevice/: newdevicemodelfromexisting.ui  selectsupporteddevice.cpp  selectsupporteddevice.ui
openhantek/src/settings/: colorsettings.h  markerandzoomsettings.cpp  markerandzoomsettings.h  scopechannel.cpp  scopechannel.h  scopemathchannel.h  scopesettings.cpp  scopesettings.h  settings.cpp  settings.h  spectrum.h  viewsettings.cpp  viewsettings.h
openhantek/src/usb/: usbdevice.cpp  usbdevice.h  usbdevicedefinitions.h
openhantek/src/utils/: debugnotify.cpp  debugnotify.h  enumhelper.h  getwithdefault.h  observer.h  printutils.cpp  printutils.h  scopecoordinates.h
openhantek/src/widgets/: colorbox.cpp  colorbox.h  datagrid.cpp  datagrid.h  dsowidget.cpp  dsowidget.h  levelslider.cpp  levelslider.h  sispinbox.cpp  sispinbox.h
